--- a/src/app/landing2/landing2.component.html
+++ b/src/app/landing2/landing2.component.html
@@ -56,25 +56,25 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <a class="dropdown-item" routerLink="/investments/stocks"
-                  >Stocks</a
-                >
+                <a class="dropdown-item" routerLink="/investments/stocks">
+                  <i class="pi pi-chart-line me-2"></i>Stocks
+                </a>
               </li>
               <li>
-                <a class="dropdown-item" routerLink="/investments/bonds"
-                  >Bonds</a
-                >
+                <a class="dropdown-item" routerLink="/investments/bonds">
+                  <i class="pi pi-money-bill me-2"></i>Bonds
+                </a>
               </li>
               <li>
-                <a class="dropdown-item" routerLink="/investments/real-estate"
-                  >Real Estate</a
-                >
+                <a class="dropdown-item" routerLink="/investments/real-estate">
+                  <i class="pi pi-building me-2"></i>Real Estate
+                </a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
-                <a class="dropdown-item" routerLink="/investments/custom"
-                  >Custom Portfolio</a
-                >
+                <a class="dropdown-item" routerLink="/investments/custom">
+                  <i class="pi pi-sliders-h me-2"></i>Custom Portfolio
+                </a>
               </li>
             </ul>
           </li>
